<resources>
	<string name="app_name">Where\'s Our Cars</string>
	<string name="app_version">Version %s</string>
	<string name="app_copyright" translatable="false">\u00A9 Copyright 2019 SEA9.ORG</string>
	<string name="app_license">
Where\'s Our Cars is a free software, and is released under the GNU GPLv2 license.\n
This program is distributed WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
    </string>
	<string name="app_author" translatable="false">paul@sea9.org</string>
	<string name="app_host">sea9.org</string>
	<string name="app_pathPrefix">/woc/</string>
	<string name="app_scheme">http</string>
	<string name="action_settings">Settings</string>
	<string name="action_about">About</string>
	<string name="hint_vehicle">Vehicle</string>
	<string name="hint_parking">Car park</string>
	<string name="hint_floor">Floor</string>
	<string name="hint_lot">Space</string>
	<string name="hint_update">Last update</string>
	<string name="hint_email_s">Subscriber\'s email</string>
	<string name="hint_email_p">Publisher\'s email</string>
	<string name="hint_id_p">Publisher\'s ID</string>
	<string name="hint_request_time">Request made at</string>
	<string name="content_clear">Clear text</string>
	<string name="content_email">Send email</string>
	<string name="label_okay">Okay</string>
	<string name="label_cancel">Cancel</string>
	<string name="label_yes">Yes</string>
	<string name="label_no">No</string>
	<string name="label_alone">Stand Alone</string>
	<string name="label_publisher">Publisher</string>
	<string name="label_subscriber">Subscriber</string>
	<string name="label_subscribers">Current subscribers</string>
	<string name="label_token">Device Token</string>
	<string name="label_accept">Accept</string>
	<string name="label_reject">Reject</string>
	<string name="msg_ui_updated">Record updated</string>
	<string name="msg_ui_add_new">Add new vehicle \'%s\'?</string>
	<string name="msg_ui_adding">Adding new vehicle \'%s\'…</string>
	<string name="msg_ui_discard">Discard changes?</string>
	<string name="msg_ui_discard_new">Discarding new vehicle \'%s\'…</string>
	<string name="msg_ui_discarding">Discarding changes…</string>
	<string name="msg_ui_touch">Touch the record…</string>
	<string name="msg_ui_retaining">Retaining unsaved changes…</string>
	<string name="msg_ui_switching">Switching to \'%s\'</string>
	<string name="msg_ui_no_change">No change made</string>
	<string name="msg_ui_empty">Vehicle name cannot be empty</string>
	<string name="msg_ui_new_parking">New parking %s added</string>
	<string name="msg_ui_existing_parking">Exiting parking %s chosen</string>
	<string name="msg_ui_db_not_ready">Database not ready</string>
	<string name="msg_sub_error">Error occurred: %d</string>
	<string name="msg_sub_no_change">Message received from publisher, no change made</string>
	<string name="msg_sub_empty">Publisher attempted to update with empty vehicle name</string>
	<string name="msg_sub_new_parking">Publisher added new parking</string>
	<string name="msg_sub_new_vehicle">Publisher added new vehicle</string>
	<string name="msg_sub_email_invalid">Require a valid subscriber email addresses</string>
	<string name="msg_pub_email_invalid">Require a valid publisher email addresses</string>
	<string name="msg_pub_delete_token">Confirm to delete subscriber %s (%s)?</string>
	<string name="msg_device_not_ready">Device token not ready</string>
	<string name="msg_subscribe_okay">Subscription request from</string>
	<string name="msg_subscribe_fail">Subscription already exists</string>
	<string name="msg_subscribe_succeed">Subscription approved</string>
	<string name="msg_subscribe_failed">Approve subscription failed</string>
	<string name="msg_subscribe_error">Error encountered when processing subscription requests, please remove the token and try again</string>
	<string name="msg_unsubscribe_pending">Unsubscribe request from</string>
	<string name="msg_unsubscribe_notfound">Subscription not found</string>
	<string name="msg_unsubscribe_succeed">Unsubscribed successfully</string>
	<string name="msg_unsubscribe_failed">Unsubscribe failed</string>
	<string name="msg_not_a_publisher">Not a publisher, ignoring subscription request</string>
	<string name="msg_refresh_token">Subscriber %s token refreshed from %s to %s</string>
	<string name="msg_refresh_succeed">Token refreshed successfully</string>
	<string name="msg_refresh_failed">Refresh token failed</string>
	<string name="msg_accept_title">Received subscription approval from</string>
	<string name="msg_accept_time">Request made on</string>
	<string name="sub_email_title0">Where\'s Our Car subscription request (%s)</string>
	<string name="sub_email_title1">Where\'s Our Car unsubscribe request (%s)</string>
	<string name="sub_email_title2">Where\'s Our Car device token update (%s)</string>
	<string name="sub_email_chooser">Sending subscription request…</string>
	<string name="sub_email_subscribe"  >http://sea9.org/woc/s?t=%s&amp;c=%s</string>
	<string name="sub_email_unsubscribe">http://sea9.org/woc/u?t=%s</string>
	<string name="sub_email_update_token">http://sea9.org/woc/d?o=%s&amp;n=%s</string>
	<string name="firebase_project_id">wheres-our-car</string>
	<string name="firebase_account_key">wheres-our-car-firebase-adminsdk-swq5c-6b91c19357.json</string>
	<string name="firebase_scope_fcm">https://www.googleapis.com/auth/firebase.messaging</string>
	<string name="firebase_endpoint_fcm">https://fcm.googleapis.com/v1/projects/%s/messages:send</string>
	<string name="firebase_succeed_fcm">projects/([\\S&amp;&amp;[^/]]+)/messages/([\\S&amp;&amp;[^/]]+)</string>
</resources>
