<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/black">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minWidth="@dimen/dialog_minWidth"
		android:paddingTop="@dimen/margin_narrow"
		android:paddingBottom="@dimen/margin_normal"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:orientation="vertical">

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name"
			android:src="@drawable/logo_car" />

		<TextView
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textColor="@android:color/white"
			android:text="@string/app_name" />

		<TextView
			android:id="@+id/version"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textColor="@android:color/white"
			android:text="@string/app_version" />

		<TextView
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/fab_margin"
			android:gravity="center"
			android:textColor="@android:color/white"
			android:text="@string/app_copyright" />

		<TextView
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/fab_margin"
			android:gravity="center"
			android:textColor="@android:color/white"
			android:text="@string/app_license" />

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_author"
			android:src="@drawable/paul" />

		<TextView
			android:id="@+id/author"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textColor="@android:color/white"
			android:text="@string/app_author" />
	</LinearLayout>
</android.support.v4.widget.NestedScrollView>