<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<ImageView
			android:id="@+id/logo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name"
			android:src="@drawable/logo_car"
			android:layout_centerHorizontal="true"
			android:layout_alignParentTop="true"
			android:layout_above="@+id/floor"/>

	<TextView
			android:id="@+id/floor"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textColorHint="@android:color/darker_gray"
			android:gravity="center"
			android:hint="@string/hint_floor"
			android:textSize="@dimen/text_widget"
			android:layout_centerHorizontal="true"
			android:layout_above="@+id/lot"/>

	<TextView
			android:id="@+id/lot"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textColorHint="@android:color/darker_gray"
			android:gravity="center"
			android:hint="@string/hint_lot"
			android:textSize="@dimen/text_widget"
			android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true"/>

	<Button
			android:id="@+id/start"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@null"/>
</RelativeLayout>